<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ser210.quinnipiac.edu.finalproject.LoginFragment"
    android:id="@+id/loginFragment"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/mainbanner"
        />

    <!--<TextView-->
        <!--android:id="@+id/title"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignStart="@+id/logInButton"-->
        <!--android:layout_marginStart="43dp"-->
        <!--android:layout_marginTop="48dp"-->
        <!--android:text="@string/fiveStars"-->
        <!--android:textSize="50dp" />-->

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:ems="9"
        android:hint="Username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/username"
        android:layout_centerVertical="true"
        android:ems="9"
        android:hint="Password"
        android:inputType="text"
        android:maxLines="1"/>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="13"
        android:text="@string/logIn"
        />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@color/colorCreate"
        android:layout_below="@+id/logInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="12"
        android:text="@string/createAccount"
        android:textColor="@color/white"
        />

</RelativeLayout>
