<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchFragment"
    tools:context="ser210.quinnipiac.edu.finalproject.SearchFragment">

    <ImageView
        android:id="@+id/genreBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/input"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genreBanner"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/search" />

    <Button
        android:id="@+id/searchBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="Search" />

</RelativeLayout>
