<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reviewFragment"
    tools:context="ser210.quinnipiac.edu.finalproject.ReviewFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="30sp"/>

    <RatingBar
        android:id="@+id/rateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/review"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rateBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="15"
        android:hint="@string/review" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:ellipsize="end"
        android:text="TextView" />

    <Button
        android:id="@+id/submitReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/review"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="Submit" />
</RelativeLayout>
